[gd_scene load_steps=8 format=3 uid="uid://dn43a3o2p7r30"]

[ext_resource type="Script" uid="uid://b83bhlv50qfco" path="res://addons/deers_time_plugin/ui/deers_timer_panel_container.gd" id="1_y55xf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kbwm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_crin8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63rm1"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4phol"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(5.0056e-06, 0.702134, 0.561252, 1)
corner_radius_top_left = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crin8"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwfud"]
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 0.324471, 0.403829, 1)
corner_radius_top_right = 16
corner_radius_bottom_right = 16
anti_aliasing_size = 10.0

[node name="DeersTimerPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -24.0
offset_right = 251.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kbwm6")
script = ExtResource("1_y55xf")

[node name="OpenTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="ProjectVBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="OpenProjectTimeLabel" type="Label" parent="ProjectVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "23 : 59 : 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ProjectVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_crin8")

[node name="UseProgressBar" type="ProgressBar" parent="ProjectVBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 36)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_63rm1")
theme_override_styles/fill = SubResource("StyleBoxFlat_4phol")
value = 50.0
show_percentage = false

[node name="UnUseProgressBar" type="ProgressBar" parent="ProjectVBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 36)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_crin8")
theme_override_styles/fill = SubResource("StyleBoxFlat_kwfud")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="ProjectVBoxContainer/PanelContainer/UnUseProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -11.5
offset_right = 110.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="UseProjectTimeLabel" type="Label" parent="ProjectVBoxContainer/PanelContainer/UnUseProgressBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "23:59:15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="ProjectVBoxContainer/PanelContainer/UnUseProgressBar/HBoxContainer"]
layout_mode = 2
text = "|"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnUseProjectTimeLabel" type="Label" parent="ProjectVBoxContainer/PanelContainer/UnUseProgressBar/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "23 : 59 : 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ProjectVBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "<"

[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]
[connection signal="pressed" from="ProjectVBoxContainer/Button" to="." method="_on_button_pressed"]
